hphp/hack/test/typecheck/case_type/multiple_bounds_on_recursive.php
<?hh

<<file: __EnableUnstableFeatures('case_types')>>

case type CTSub as mixed, CTSuper = int;

case type CTSuper = int | vec<CTSub>;
